--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,103 @@
-# Ignore virtual environments
-venv/
-env/
-.venv/
-
-# Ignore Python bytecode files
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
+*$py.class
 
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django, Flask, Scrapy, Sphinx, PyBuilder, Jupyter, IPython, etc.
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+instance/
+.webassets-cache
+.scrapy
+docs/_build/
+.pybuilder/
+target/
+.ipynb_checkpoints
+profile_default/
+ipython_config.py
+
+# Environment files
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Pyre, mypy, pytype, and other type-checking tools
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+cython_debug/
+
+# PyCharm, Spyder, Rope, mkdocs, SageMath, Celery, etc.
+.spyderproject
+.spyproject
+.ropeproject
+/site
+celerybeat-schedule
+celerybeat.pid
+*.sage.py
+
+# Project-specific configurations
+config.py  # if you have a config file for API keys
+
+# Output files
+output/
+*.csv
+*.png
